--- a/views/partials/user/user-form.ejs
+++ b/views/partials/user/user-form.ejs
@@ -1,6 +1,6 @@
 <form class="user-form" method="POST" action="<%= user && user.id ? `/user/${user.id}/update` : '/user/create' %>">
     <input type="text" name="login" placeholder="Login Name" value="<%= user ? user.login : '' %>" required><br>
-    <input type="password" name="password" placeholder="Password" value="<%= user ? user.password : '' %>" required><br>
+    <input type="password" name="password" placeholder="Password" value="" required><br>
     <% if (session.authorized) { %>
         <input type="checkbox" name="administrator" <%= user && user.administrator ? 'checked' : '' %>><br>
     <% } %>
