Check API for perfomance (closes #5)
 Check API for errors
x Check for perfomance in Postman
 Convert sequelize objects in JSON

--- a/views/entry/entry.ejs
+++ b/views/entry/entry.ejs
@@ -12,6 +12,8 @@
                     <article>
                         <h1><%= entry.title %></h1>
                         <p><%- entry.content %></p>
+                        <p><%- entry.language %></p>
+                        <p><%- entry.tests %></p>
                     </article>
                     <% include ../partials/comment/comments %>
                 </section>
